@@ -5,29 +5,45 @@ import org.campusmolndal.grupp3molnet.services.JwtService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.web.cors.CorsConfiguration;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
+import java.util.Arrays;
+
+import static org.springframework.security.config.Customizer.withDefaults;
 
 @Configuration
 @EnableWebSecurity
+@EnableMethodSecurity(securedEnabled = true)
 public class SecurityConfiguration {
 
-    @Autowired
-    private JwtService jwtService;
+    private final JwtService jwtService;
+    private final UserDetailsService userDetailsService;
 
+    /**
+     * Konstruktor för att injicera beroenden för JwtService och UserDetailsService.
+     *
+     * @param jwtService JWT-tjänsten
+     * @param userDetailsService användardetaljstjänsten
+     */
     @Autowired
-    private UserDetailsService userDetailsService;
-
+    public SecurityConfiguration(JwtService jwtService, UserDetailsService userDetailsService) {
+        this.jwtService = jwtService;
+        this.userDetailsService = userDetailsService;
+    }
 
     /**
      * Array som innehåller URI-sökvägar som definierar endpoints som inte kräver autentisering.
      */
     private static final String[] AUTH_WHITELIST = {
-            //TODO lägga till resterande endpoints
             "/auth/signup",
             "/auth/login",
             "/swagger-resources",
@@ -40,7 +56,8 @@ public class SecurityConfiguration {
             "v2/api-docs/**",
             "/v3/api-docs/**",
             "/v3/api-docs.yaml",
-            "/swagger-ui/**"
+            "/swagger-ui/**",
+            "/"
     };
 
     /**
@@ -48,10 +65,11 @@ public class SecurityConfiguration {
      * @return SecurityFilterChain
      * @throws Exception if an error occurs
      */
-
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
+                // Konfigurera CORS för React frontend
+                .cors(withDefaults())
                 // Konfigurera autentisering och auktorisering
                 .authorizeHttpRequests(authorizeRequests -> authorizeRequests
                         .requestMatchers(AUTH_WHITELIST).permitAll() // Tillåt alla för de definierade whitelist-URL:erna
@@ -59,9 +77,7 @@ public class SecurityConfiguration {
                         .anyRequest().authenticated() // Kräver autentisering för alla andra begäranden
                 )
                 // Konfigurera CSRF-skydd
-                .csrf(csrf -> csrf
-                        .disable() // Inaktivera CSRF-skydd för API:er om det är lämpligt
-                )
+                .csrf(AbstractHttpConfigurer::disable) // Inaktivera CSRF-skydd för API:er om det är lämpligt
                 // Konfigurera sessionhantering
                 .sessionManagement(sessionManagement -> sessionManagement
                         .sessionCreationPolicy(SessionCreationPolicy.STATELESS) // Använd stateless session
@@ -70,26 +86,29 @@ public class SecurityConfiguration {
                 .addFilterBefore(new JwtAuthenticationFilter(jwtService, userDetailsService), UsernamePasswordAuthenticationFilter.class)
                 // Konfigurera HTTP Basic autentisering
                 .httpBasic(httpBasic -> httpBasic
-                        .authenticationEntryPoint((request, response, authException) -> {
-                            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized");
-                        })
+                        .authenticationEntryPoint((request, response, authException) ->
+                            response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized")
+                        )
                 );
         return http.build();
     }
 
     /**
-     * Returns a CorsConfigurationSource
-     * @return CorsConfigurationSource
+     * Konfigurera CORS-filtrering för att tillåta anrop från port 3000.
+     *
+     * @return UrlBasedCorsConfigurationSource
      */
-    /*
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
-        configuration.setAllowedMethods(List.of("GET", "POST"));
-        configuration.setAllowedHeaders(List.of("Authorization","Content-Type"));
+        configuration.setAllowedOriginPatterns(Arrays.asList("http://localhost:*", "http://husdjursregister1-env.eba-gzkbcjgw.eu-north-1.elasticbeanstalk.com"));
+        configuration.setAllowedMethods(Arrays.asList("*"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        configuration.setExposedHeaders(Arrays.asList("Authorization"));
+        configuration.setAllowCredentials(true);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
-    } */
+    }
 }
